[gd_scene load_steps=2 format=3 uid="uid://ci8gufm7i4oio"]

[ext_resource type="Script" path="res://hud.gd" id="1_pcj0i"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pcj0i")

[node name="Menu" type="Button" parent="."]
offset_left = 32.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 64.0
text = "Menu"

[node name="menu_container" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -50.5
offset_right = 116.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Restart" type="Button" parent="menu_container"]
layout_mode = 2
text = "Restart"

[node name="Main_menu" type="Button" parent="menu_container"]
layout_mode = 2
text = "Main Menu"

[node name="Next_level" type="Button" parent="menu_container"]
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="menu_container/Main_menu" to="." method="_on_main_menu_pressed"]
